--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -59,7 +59,7 @@
       display: none;
     }
 
-    .mainStyle .header {
+    .mainStyle__header {
       background: #eeeeee;
       padding: 20px;
       width: 100%;
@@ -69,23 +69,23 @@
       justify-content: space-between;
     }
 
-    .mainStyle .container {
+    .mainStyle__container {
       height: 100%;
       display: flex;
       background-color: white;
       width: 100%;
     }
 
-    .mainStyle .container .column {
+   /* .mainStyle .container .column {
       display: flex;
       flex-direction: column;
-    }
+    }*/
 
     .column-left {
       background-color: #eeeeee;
     }
 
-    .column_right {
+    .column-right {
       background-color: #eeeeee;
       margin-top: 20px;
       margin-left: 20px;
@@ -97,7 +97,6 @@
 
     .column-left__menuBar {
       padding: 40px;
-      /*overflow-y: auto;*/
     }
 
     .mainStyle {
@@ -118,24 +117,26 @@
     .header__title_logout {
       font-size: 24px;
     }
-    .column-right_content {
+    .column-right__content {
       padding: 40px;
-      /*overflow-y: auto;*/
+    }
+    .menuBar__options-content_visible {
+      visibility: hidden;
     }
 
 
     @media screen and (max-width:575px) {
-      .mainStyle .container {
+      .mainStyle__container {
         display: flex;
         flex-direction: column;
       }
 
-      .mainStyle .header {
+      .mainStyle__header {
         display: flex;
         flex-direction: row;
       }
 
-      .mainStyle .container .column_right {
+      .mainStyle__container .column-right {
         width: 100%;
         margin: 0;
         height: 95%;
@@ -163,10 +164,6 @@
         float: right;
         display: none;
       }
-
-      /*.menuBar .space1 {
-        padding-right: 5px;
-      }*/
 
       .menuBar__options {
         height: 100%;
@@ -216,18 +213,21 @@
         font-size: 20px;
         cursor: pointer
       }
+      .menuBar__options-content_visible {
+        visibility: visible;
+      }
     }
   </style>
 </head>
 
 <body>
   <div class="mainStyle">
-    <div class="header">
+    <div class="mainStyle__header">
       <div class="header__menu-hamburger_left"><span onclick="openNav()">&#9776; </span></div>
       <div class="header__title_middle">My Awesome Webservices</div>
       <div class="header__title_logout">logout</div>
     </div>
-    <div class="container">
+    <div class="mainStyle__container">
       <div class="column-left">
         <div class="column-left__menuBar ">
           <div class="menuBar__welcomeText_red">
@@ -238,13 +238,13 @@
             <div class="menuBar__options-content">
               <a href="#">Profile</a>
               <a href="#">Properties</a>
-              <a href="#">Logout</a>
+              <a href="#" class="menuBar__options-content_visible">Logout</a>
             </div>
           </div>
         </div>
       </div>
-      <div class="column_right">
-        <div class="column_right_content">
+      <div class="column-right">
+        <div class="column-right__content">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quam massa, ornare at turpis quis, varius
             pulvinar lorem. Morbi eleifend nisi eget viverra fermentum. Vivamus interdum dui quis orci placerat semper.
             Morbi lobortis ex sit amet risus cursus pharetra. Interdum et malesuada fames ac ante ipsum primis in
