--- a/mainMenuProperties - Copy.html
+++ b/mainMenuProperties - Copy.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <title>E-services for House Management - main menu properties</title>
-  <script src="/scripts/login.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="scripts/login.js"></script>
 
   <style type="text/css">
     * {
@@ -21,11 +22,11 @@
       overflow: hidden;
     }
 
-    .overlay {
+    .menuBar__options {
       height: 100%;
     }
 
-    .overlay-content {
+    .menuBar__options-content {
       position: relative;
       top: 25%;
       width: 100%;
@@ -33,7 +34,7 @@
       margin-top: 30px;
     }
 
-    .overlay a {
+    .menuBar__options a {
       padding: 8px;
       text-decoration: none;
       font-size: 25px;
@@ -42,12 +43,12 @@
       transition: 0.3s;
     }
 
-    .overlay a:hover,
-    .overlay a:focus {
+    .menuBar__options a:hover,
+    .menuBar__options a:focus {
       color: gray;
     }
 
-    .overlay .closebtn {
+    .menuBar__options .closebtn {
       position: absolute;
       top: 20px;
       right: 45px;
@@ -59,7 +60,7 @@
       display: none;
     }
 
-    .mainStyle .header {
+    .mainStyle__header {
       background: #eeeeee;
       padding: 20px;
       width: 100%;
@@ -69,33 +70,34 @@
       justify-content: space-between;
     }
 
-    .mainStyle .container {
+    .mainStyle__container {
       height: 100%;
       display: flex;
       background-color: white;
       width: 100%;
     }
 
-    .mainStyle .container .column {
+   /* .mainStyle .container .column {
       display: flex;
       flex-direction: column;
-    }
+    }*/
 
-    .mainStyle .container .column_left {
+    .column-left {
       background-color: #eeeeee;
     }
 
-    .mainStyle .container .column_right {
+    .column-right {
       background-color: #eeeeee;
       margin-top: 20px;
       margin-left: 20px;
       width: 50%;
       overflow-y: auto;
+      display: flex;
+      flex-direction: column;
     }
 
-    .container .column .bottom {
+    .column-left__menuBar {
       padding: 40px;
-      /*overflow-y: auto;*/
     }
 
     .mainStyle {
@@ -103,11 +105,10 @@
       flex-direction: column;
     }
 
-    .mainStyle .container .column_left .welcomeText {
+    .menuBar__welcomeText_red {
       color: red;
       font-size: 18px;
       text-align: center;
-
     }
 
     .header__title_middle {
@@ -117,33 +118,39 @@
     .header__title_logout {
       font-size: 24px;
     }
+    .column-right__content {
+      padding: 40px;
+    }
+    .menuBar__options-content_visible {
+      visibility: hidden;
+    }
 
 
     @media screen and (max-width:575px) {
-      .mainStyle .container {
+      .mainStyle__container {
         display: flex;
         flex-direction: column;
       }
 
-      .mainStyle .header {
+      .mainStyle__header {
         display: flex;
         flex-direction: row;
       }
 
-      .mainStyle .container .column_right {
+      .mainStyle__container .column-right {
         width: 100%;
         margin: 0;
         height: 95%;
         overflow-y: auto;
       }
 
-      .mainStyle .container .column_left {
+      .column-left {
         align-items: center;
         border-bottom: 2px solid black;
         overflow-y: hidden;
       }
 
-      .container .column .bottom {
+      .column-left__menuBar {
         padding: 0;
       }
 
@@ -159,11 +166,7 @@
         display: none;
       }
 
-      /*.menuBar .space1 {
-        padding-right: 5px;
-      }*/
-
-      .overlay {
+      .menuBar__options {
         height: 100%;
         width: 0;
         position: fixed;
@@ -176,7 +179,7 @@
         transition: 0.5s;
       }
 
-      .overlay-content {
+      .menuBar__options-content {
         position: relative;
         top: 25%;
         width: 100%;
@@ -184,7 +187,7 @@
         margin-top: 30px;
       }
 
-      .overlay a {
+      .menuBar__options a {
         padding: 8px;
         text-decoration: none;
         font-size: 36px;
@@ -193,12 +196,12 @@
         transition: 0.3s;
       }
 
-      .overlay a:hover,
-      .overlay a:focus {
+      .menuBar__options a:hover,
+      .menuBar__options a:focus {
         color: #f1f1f1;
       }
 
-      .overlay .closebtn {
+      .menuBar__options .closebtn {
         position: absolute;
         top: 20px;
         right: 45px;
@@ -211,35 +214,38 @@
         font-size: 20px;
         cursor: pointer
       }
+      .menuBar__options-content_visible {
+        visibility: visible;
+      }
     }
   </style>
 </head>
 
 <body>
   <div class="mainStyle">
-    <div class="header">
+    <div class="mainStyle__header">
       <div class="header__menu-hamburger_left"><span onclick="openNav()">&#9776; </span></div>
       <div class="header__title_middle">My Awesome Webservices</div>
       <div class="header__title_logout">logout</div>
     </div>
-    <div class="container">
-      <div class="column column_left">
-        <div class="bottom menuBar">
-          <div class="welcomeText">
+    <div class="mainStyle__container">
+      <div class="column-left">
+        <div class="column-left__menuBar ">
+          <div class="menuBar__welcomeText_red">
             <p>Welcome,<br>Lavrentijs</p>
           </div>
-          <div id="myNav" class="overlay">
+          <div id="myNav" class="menuBar__options">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <div class="overlay-content">
+            <div class="menuBar__options-content">
               <a href="#">Profile</a>
               <a href="#">Properties</a>
-              <a href="#">Logout</a>
+              <a href="#" class="menuBar__options-content_visible">Logout</a>
             </div>
           </div>
         </div>
       </div>
-      <div class="column column_right">
-        <div class="bottom">
+      <div class="column-right">
+        <div class="column-right__content">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quam massa, ornare at turpis quis, varius
             pulvinar lorem. Morbi eleifend nisi eget viverra fermentum. Vivamus interdum dui quis orci placerat semper.
             Morbi lobortis ex sit amet risus cursus pharetra. Interdum et malesuada fames ac ante ipsum primis in
