--- a/mainMenuProperties.html
+++ b/mainMenuProperties.html
@@ -105,6 +105,7 @@
       overflow-y: auto;
       display: flex;
       flex-direction: column;
+      height: 300px;
     }
 
     .column-left__menuBar {
@@ -164,6 +165,13 @@
       font-size: 22px;
       font-weight: 400;
       margin-bottom: 20px;
+    }
+
+    .input-form__button_orange-profile {
+      border: 1px solid #fca311;
+      background-color: #fca311;
+      background-image: linear-gradient(-245deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
+      width: 150px;
     }
 
 
@@ -297,6 +305,20 @@
                 <span class="input-form__text-label-profile">E-mail</span>
                 <input class="input-form__text-input" type="text" name="email" autocomplete="on" required>
               </label>
+
+              <label class="input-form__field_profile">
+                <span class="input-form__text-label-profile">Name</span>
+                <input class="input-form__text-input" type="text" name="name" autocomplete="on" required>
+              </label>
+
+              <label class="input-form__field_profile">
+                <span class="input-form__text-label-profile">Password</span>
+                <input class="input-form__text-input" type="password" name="password" autocomplete="on" required>
+              </label>
+
+              <div class="input-form__field_profile">
+                <button class="input-form__button input-form__button_orange-profile" type="button" onclick="window.location.href='#'">Save</button>
+              </div>
 
             </form>
           </div>
