--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </label>
 
     <div class="input-form__field">
-      <button class="input-form__button input-form__button_orange" type="button" onclick="window.location.href='mainMenuProperties.html'">Login</button>
+      <button class="input-form__button input-form__button_orange" type="button" onclick="window.location.href='profilePage.html'">Login</button>
     </div>
 
     <div class="input-form__field">
