--- a/todo.html
+++ b/todo.html
@@ -69,31 +69,20 @@ ul li.checked::before {
 }
 
 /* Style the close button */
-.close1 {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px 16px;
-}
-/* Style the view button */
-.close2 {
-    position: absolute;
-    right: 100px;
-    top: 0;
-    padding: 12px 16px;
+.close {
+  /*position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;*/
+  float: right;
+  background-color: #f44336;
+  color: white;
 }
 
 .close:hover {
-    float: right;
-    background-color: #f44336;
-    color: white;
+  background-color: #f44336;
+  color: white;
 }
-.close {
-    float: right;
-    background-color: #f44336;
-    color: white;
-}
-
 
 /* Style the header */
 .header {
@@ -115,7 +104,7 @@ input {
   margin: 0;
   border: none;
   border-radius: 0;
-  width: 75%;
+  width: 100%;
   padding: 10px;
   float: left;
   font-size: 16px;
@@ -138,7 +127,20 @@ input {
 .addBtn:hover {
   background-color: #bbb;
 }
-
+/* Style the close button */
+.close1 {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px;
+}
+/* Style the view button */
+.close2 {
+    position: absolute;
+    right: 100px;
+    top: 0;
+    padding: 12px 16px;
+}
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -160,7 +162,7 @@ input {
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
-  height: 150px;
+  height: 250px;
 }
 </style>
 </head>
@@ -172,22 +174,20 @@ input {
         <input type="text" id="myInput" placeholder="Title...">
         <span onclick="newElement()" class="addBtn">Add</span>
     </div>
-    <div>
-        <h3 style="padding-left: 40px">Address</h3>
-    </div>
+
     <ul id="myUL">
-        <li id="ex">Brivibas 123</li>
-        <li class="checked">Saharova 34</li>
-        <li>Blaumana 12</li>
-        <li>Dzirnavu 201</li>
-        <li>Elizabetes 83</li>
-        <li>Lacplesa 42</li>
+        <li id="ndk7shy5ek">Brivibas 123</li>
+        <li id="mal38fhsk">Saharova 34</li>
+        <li id="jdeueqw2ss">Blaumana 12</li>
+        <li id="jdmuewwi4ss">Gogola 12</li>
     </ul>
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2>Property details</h2>
             <input id="info" type="text" name="password" />
+            <input id="info" type="text" name="password" value="some Text" />
+            <button onclick="CloseDialogWindow()" class="buttonSave" type="button">Save</button>
         </div>
     </div>
 
@@ -197,24 +197,11 @@ input {
         // Get the button that opens the modal
         var btn = document.getElementById("myBtn");
         // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-        // When the user clicks the button, open the modal 
-        //btn.onclick = function () {
-        //    modal.style.display = "block";
-        //}
+        var spanClose = document.getElementsByClassName("close")[0];
+        //console.log('spanClose ' + spanClose);
 
-        // When the user clicks on <span> (x), close the modal
-        // span.onclick = function () {
-        //console.log(this.parentNode);
-        //    modal.style.display = "none";
-        //}
+        var buttonSaveClose = document.getElementsByClassName("buttonSave")[0];
 
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function (event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
         // Create a "close" button and append it to each list item
         var myNodelist = document.getElementsByTagName("LI");
         var i;
@@ -223,12 +210,12 @@ input {
             var txtR = document.createTextNode("Remove");
             spanR.className = "close1";
 
+            spanR.appendChild(txtR);
+            myNodelist[i].appendChild(spanR);
+
             var spanV = document.createElement("BUTTON");
             var txtV = document.createTextNode("View");
             spanV.className = "close2";
-
-            spanR.appendChild(txtR);
-            myNodelist[i].appendChild(spanR);
 
             spanV.appendChild(txtV);
             myNodelist[i].appendChild(spanV);
@@ -240,48 +227,33 @@ input {
         for (i = 0; i < close.length; i++) {
             close[i].onclick = function () {
                 var div = this.parentElement;
+                console.log('Closed ' + div);
                 div.style.display = "none";
             }
         }
 
         // Click on a 'view' button to view the current list item
-        var close = document.getElementsByClassName("close2");
+        var close123 = document.getElementsByClassName("close2");
+        console.log('close123 - ' + close123);
         //close = $('.myUL');
-        for (var i = 0; i < close.length; i++) {
-            close[i].onclick = function (event) {
-                //console.log('Первый event target ' + event.tagName);
-                var div = this.parentElement.firstChild.textContent;
+        for (var i = 0; i < close123.length; i++) {
+            close123[i].onclick = function () {
+                var el_ID = event.target.parentNode.id;
+                console.log('element ID - ' + el_ID);
+
+                var div1 = this.parentElement.firstChild.textContent;
                 modal.style.display = "block";
                 // document.getElementById('info').innerHTML = div;
-                document.getElementById('info').value = div;
-                //this.parentElement.firstChild.textContent = document.getElementById('info').value;
-                //console.log(this.parentElement.firstChild.textContent);
-                //console.log(document.getElementById('info').value);
-                //this.parentElement.firstChild.textContent = document.getElementById('info').value;
+                document.getElementById('info').value = div1;
                 console.log(this.parentElement.firstChild.textContent);
 
-                //console.log(document.getElementById('info').value);
-                //this.parentElement.firstChild.textContent = document.getElementById('info').value;
-                //console.log(event.target);
-                console.log(document.getElementById('info').value);
-                document.getElementById("myInput").value = 'mama';
-                var link = document.getElementById('myInput');
-                link.click();
-                //console.log(event);
-                //modal.style.display = "none";
-
-
-                //this.parentElement.firstChild.textContent = document.getElementById('info').value;
+                buttonSaveClose.onclick = function () {
+                    console.log(document.getElementById('info').value);
+                    document.getElementById(el_ID).firstChild.textContent = document.getElementById('info').value;
+                    modal.style.display = "none";
+                }
             }
         }
-
-        // Add a "checked" symbol when clicking on a list item
-        var list = document.querySelector('ul');
-        list.addEventListener('click', function (ev) {
-            if (ev.target.tagName === 'LI') {
-                ev.target.classList.toggle('checked');
-            }
-        }, false);
 
         // Create a new list item when clicking on the "Add" button
         function newElement() {
@@ -296,19 +268,51 @@ input {
             }
             document.getElementById("myInput").value = "";
 
+            var randomID = Math.random().toString(36).substr(2, 16);
+            li.setAttribute('id', randomID);
+
             var span = document.createElement("BUTTON");
             var txt = document.createTextNode("Remove");
-            span.className = "close";
+            span.className = "close1";
             span.appendChild(txt);
             li.appendChild(span);
 
+            var span1 = document.createElement("BUTTON");
+            var txt1 = document.createTextNode("View");
+            span1.className = "close2";
+            span1.appendChild(txt1);
+            li.appendChild(span1);
+            console.log(li);
+            var close123 = document.getElementsByClassName("close2");
+            //console.log('close123 - ' + close123);
+
             for (i = 0; i < close.length; i++) {
                 close[i].onclick = function () {
+                    console.log('tik')
                     var div = this.parentElement;
                     div.style.display = "none";
                 }
             }
+            for (var i = 0; i < close123.length; i++) {
+                close123[i].onclick = function () {
+                    var el_ID = event.target.parentNode.id;
+                    console.log('element ID - ' + el_ID);
+
+                    var div1 = this.parentElement.firstChild.textContent;
+                    modal.style.display = "block";
+                    // document.getElementById('info').innerHTML = div;
+                    document.getElementById('info').value = div1;
+                    console.log(this.parentElement.firstChild.textContent);
+
+                    buttonSaveClose.onclick = function () {
+                        console.log(document.getElementById('info').value);
+                        document.getElementById(el_ID).firstChild.textContent = document.getElementById('info').value;
+                        modal.style.display = "none";
+                    }
+                }
+            }
         }
+
     </script>
 
 </body>
