properties page: in progress

--- a/propertiesPage.html
+++ b/propertiesPage.html
@@ -329,25 +329,12 @@
           <div class="">
             <form class="input-form__profile">
 
-              <h1 class="input-form__title input-form__title-profile_big">Profile</h1>
+              <h1 class="input-form__title input-form__title-profile_big">Properties</h1>
 
-              <label class="input-form__field_profile">
-                <span class="input-form__text-label-profile">E-mail</span>
-                <input class="input-form__text-input" type="text" name="email" autocomplete="on" required readonly>
-              </label>
-
-              <label class="input-form__field_profile">
-                <span class="input-form__text-label-profile">Name</span>
-                <input class="input-form__text-input" type="text" name="name" autocomplete="on" required>
-              </label>
-
-              <label class="input-form__field_profile">
-                <span class="input-form__text-label-profile">Password</span>
-                <input class="input-form__text-input" type="password" name="password" autocomplete="on" required>
-              </label>
+              
 
               <div class="input-form__field_profile">
-                <button class="input-form__button input-form__button_orange-profile" type="button" onclick="window.location.href='#'">Save</button>
+                <button class="input-form__button input-form__button_orange-profile" type="button" onclick="window.location.href='#'">Add</button>
               </div>
 
             </form>
